--- a/Project 3/week3_assignment/week3_assignment/SecondView.xib
+++ b/Project 3/week3_assignment/week3_assignment/SecondView.xib
@@ -6,6 +6,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SecondViewController">
             <connections>
+                <outlet property="closeKeyboard" destination="2OS-7z-fFU" id="ENM-EB-SAe"/>
+                <outlet property="datePicker" destination="x8M-To-Pte" id="FDV-uM-Ah8"/>
+                <outlet property="eventTitle" destination="NsU-tj-hP3" id="MfJ-we-6UT"/>
+                <outlet property="saveButton" destination="d4k-PC-I2q" id="iok-cG-LNt"/>
                 <outlet property="view" destination="1" id="J5C-1P-VCN"/>
             </connections>
         </placeholder>
@@ -19,6 +23,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.54117649793624878" green="0.7882353663444519" blue="0.44705885648727417" alpha="1" colorSpace="deviceRGB"/>
                     <state key="normal" title="Save">
+                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
@@ -27,6 +32,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="0.44313728809356689" green="0.66666668653488159" blue="0.85882359743118286" alpha="1" colorSpace="deviceRGB"/>
                     <state key="normal" title="Close Keyboard">
+                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
