--- a/Project 3/week3_assignment/week3_assignment/Base.lproj/Main.storyboard
+++ b/Project 3/week3_assignment/week3_assignment/Base.lproj/Main.storyboard
@@ -22,6 +22,9 @@
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <connections>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="Sna-9E-L1u"/>
+                                </connections>
                             </textView>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PCM-Qr-xke">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
